--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <h1>Classic Marketplace</h1>
+  <img src="cmp-logo.PNG" alt="Classic Marketplace Logo">
   <p>QnA</p>
   <br>
   <p>Q: Wait! This doesn't look like a marketplace!</p>
