--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <img src="cmp-logo.PNG" alt="Classic Marketplace Logo">
+  <img src="worldofproducts.GIF" alt="Discover a world  of products for windows">
   <p>QnA</p>
   <br>
   <p>Q: Wait! This doesn't look like a marketplace!</p>
