--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
-  <img src="cmp-logo.PNG" alt="Classic Marketplace Logo">
+<<html>
+  <img src="cmp-logo.PNG" alt="Classic Marketplace Logo"><label for="search">Search (unfunctional):</label>
+  <input type="text" id="search" name="search">
   <br>
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
   <p>QnA</p>
