--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <input type="text" id="search" name="search">
   <br>
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
-  <p>QnA</p>
   <br>
-  <p>Q: Wait! This doesn't look like a marketplace!</p>
+  <img src="sw3.jpg alt="software">
   <br>
-  <p>A: We are reserving the domain and currently archiving the Windows Marketplace 2004 website.</p>
+  3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
 </html>
