--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <br>
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
   <br>
-  <img src="sw3.jpg alt="software">
+  <img src="sw3.jpg" alt="software">
   <br>
   3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
 </html>
