--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<<html>
+<html>
   <img src="cmp-logo.PNG" alt="Classic Marketplace Logo"><label for="search">Search (unfunctional):</label>
-  <br>
   <input type="text" id="search" name="search">
   <br>
   <div class="headerTile" id="headerTile" style="padding-left:15px;">
