--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
 <html>
-  <img src="cmp-logo.PNG" alt="Classic Marketplace Logo"><label for="search">Search (unfunctional):</label>
-  <input type="text" id="search" name="search">
-  <br>
-  <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
-  <br>
-  <img src="sw3.jpg" alt="software">
-  <br>
-  3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script> 
+  </head>
+  <body>
+    <img src="cmp-logo.PNG" alt="Classic Marketplace Logo">
+    <label for="search">Search (unfunctional):</label>
+    <input type="text" id="search" name="search"><br>
+    <img src="worldofproducts.gif" alt="Discover a world of products for windows"><br>
+    <img src="sw3.jpg" alt="software"><br>
+    3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
+  </body>
 </html>
