--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <img src="cmp-logo.PNG" alt="Classic Marketplace Logo">
     <label for="search">Search (unfunctional):</label>
     <input type="text" id="search" name="search"><br>
-    <img src="worldofproducts.gif" alt="Discover a world of products for windows"><br>
+    <div class="1">
+      <div class="2">
+        Start anything you like
+      </div>
+      <div class="3">
+        with a world of products for Windows
+      </div>
+    </div>
+    <br>
     <img src="sw3.jpg" alt="software"><br>
     3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
   </body>
