--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
   <img src="cmp-logo.PNG" alt="Classic Marketplace Logo"><label for="search">Search (unfunctional):</label>
   <input type="text" id="search" name="search">
   <br>
+  <div class="w3-bar w3-green">
+  <br>
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
   <br>
   <img src="sw3.jpg" alt="software">
   <br>
-  3D Pinball: Space Cadet for Windows <a href="https://d2.myabandonware.com/t/1daaca2a-603c-4270-9100-7bf6683fcdec/Space-Cadet-3D-Pinball_Win_EN.exe">Download</a>
+  <h2>Featured categories</h2>
+  <ul>
+    <li>
+      ::marker
+      <a href="categorygames.html">Games</a>
+    </li>
+  </ul>
 </html>
