--- a/categorygames.html
+++ b/categorygames.html
@@ -1,5 +1,5 @@
 <html>
-  <img src="cmp-logo.PNG" alt="Classic Marketplace logo"> <p>Home > Software > Games</p> <p>   Discover a world of products that work with Windows.</p>
+  <a href="index.html"><img src="cmp-logo.PNG" alt="Classic Marketplace logo"></a> <p>Home > Software > Games</p> <p>   Discover a world of products that work with Windows.</p>
   <br>
   <h3>Games</h3>
 </html>
