--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <br>
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
   <br>
-  <img src="sw3.jpg" alt="software">
+  <a href="categoryhub.html"><img src="sw3.jpg" alt="software"></a>
   <br>
   <h2>Featured categories</h2>
   <ul>
