--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <img src="worldofproducts.gif" alt="Discover a world  of products for windows">
   <br>
   <a href="categoryhub.html"><img src="sw3.jpg" alt="software"></a>
-  <br>
-  <h2>Featured categories</h2>
+  <p>Featured categories</p>
   <ul>
     <li>
       <a href="categorygames.html">Games</a>
