--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <img src="cmp-logo.PNG" alt="Classic Marketplace Logo"><label for="search">Search (unfunctional):</label>
   <input type="text" id="search" name="search">
   <br>
