--- a/categoryhub.html
+++ b/categoryhub.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <a href="index.html"><img src="cmp-logo.PNG"></a> <p><a href="index.html">Home</a> > Software </p>
   <br>
   <h3>Software</h3>
