--- a/categorygames.html
+++ b/categorygames.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <a href="index.html"><img src="cmp-logo.PNG" alt="Classic Marketplace logo"></a> <p><a href="index.html">Home</a> > <a href="categoryhub.html">Software</a> > Games</p>
   <br>
   <h3>Games</h3>
