--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <img src="cmp-logo.PNG">
   <br>
-  <img src="worldofproducts.gif">
+  <img src="topimage.gif">
   <br>
   <br>
   <img src="sw3.jpg">
