--- a/categoryhub.html
+++ b/categoryhub.html
@@ -8,6 +8,6 @@
   <br>
   <a href="categorygames.html">Games</a> <p>Discover games that are made for Windows.</p>
   <br>
-  <a href="categorymanagement.html>Management</a> <p>Discover management programs for Windows.</p>
+  <a href="categorymanagement.html">Management</a> <p>Discover management programs for Windows.</p>
   
 </html>
