--- a/categorymanagement.html
+++ b/categorymanagement.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <a href="index.html"><img src="cmp-logo.PNG"></a> <p><a href="index.html">Home</a> > <a href="categoryhub.html"> > Management</p>
+  <a href="index.html"><img src="cmp-logo.PNG"></a> <p><a href="index.html">Home</a> > <a href="categoryhub.html">Software</a> > Management</p>
   <br>
   <h3>Management</h3>
   <br>
