--- a/categorygames.html
+++ b/categorygames.html
@@ -6,5 +6,9 @@
   <br>
   <h3>Games</h3>
   <p>3D Pinball for Windows: Space Cadet <a href="https://d2.myabandonware.com/t/035841bd-5e9f-4ced-82b4-7eb8a81b30e6/Space-Cadet-3D-Pinball_Win_EN.exe">Download it for Windows</a> Provider: MyAbandonware</p>
+  <br>
+  <p>Inkball for Windows <a href="https://d2.myabandonware.com/t/5488b093-9cea-4025-b53a-748aaeac0d0b/InkBall_Win_EN.zip">Download it for Windows</a> Provider: MyAbandonware</p>
+  <br>
+  <p>Windows 7 Games pack for Windows <a href="https://win7games.com/download/Windows7Games_for_Windows_11_10_8.zip">Download it for Windows</a> Provider: win7games.com</p>
 </html>
  
