--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <img src="cmp-logo.PNG">
   <br>
+  <p style="background-color:#0096FF;">Navigation Bar                      <a href="categoryhub.html">Software</a> <a href="community.html">Community</a>                       </p>
+  <br>
   <img src="topimage.gif">
   <br>
   <br>
