--- a/categorygames.html
+++ b/categorygames.html
@@ -4,6 +4,9 @@
   </head>
   <a href="index.html"><img src="cmp-logo.PNG" alt="Classic Marketplace logo"></a> <p><a href="index.html">Home</a> > <a href="categoryhub.html">Software</a> > Games</p>
   <br>
+  <img src="STR_personal_fun.jpg">
+  <p>Croquet or Crochet? Gaming or picture framing? No matter what your form of entertainment is, you will be able to talk about it on the Classic Marketplace subreddit, opening soon.</p>
+  <br>
   <h3>Games</h3>
   <p>3D Pinball for Windows: Space Cadet <a href="https://d2.myabandonware.com/t/035841bd-5e9f-4ced-82b4-7eb8a81b30e6/Space-Cadet-3D-Pinball_Win_EN.exe">Download it for Windows</a> Provider: MyAbandonware</p>
   <br>
