--- a/categorygames.html
+++ b/categorygames.html
@@ -6,8 +6,8 @@
   <br>
   <img src="STR_personal_fun.jpg">
   <p>Croquet or Crochet? Gaming or picture framing? No</p>
-  <br>
-  <p>matter what your form of entertainment is, you can chat about it on the official subreddit, opening soon.</p>
+  <p>matter what your form of entertainment is, you can</p> 
+  <p>chat about it on the official subreddit, opening soon.</p>
   <br>
   <h3>Games</h3>
   <p>3D Pinball for Windows: Space Cadet <a href="https://d2.myabandonware.com/t/035841bd-5e9f-4ced-82b4-7eb8a81b30e6/Space-Cadet-3D-Pinball_Win_EN.exe">Download it for Windows</a> Provider: MyAbandonware</p>
