--- a/categoryhub.html
+++ b/categoryhub.html
@@ -9,5 +9,7 @@
   <a href="categorygames.html">Games</a> <p>Discover games that are made for Windows.</p>
   <br>
   <a href="categorymanagement.html">Management</a> <p>Discover management programs for Windows.</p>
+  <br>
+  <a href="categoryvirtual.html">Virtualization</a> <p>Discover virtualization software which allows you to install a computer inside a computer.</p>
   
 </html>
