--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <ul>
     <ls>
       <a href="categorygames.html">Games</a>
+      <a href="categorymanagement.html">Management</a>
+      <a href="categoryvirtual.html">Virtualization</a>
     </ls>
   </ul>
   <p>____________________</p>
