--- a/categoryhub.html
+++ b/categoryhub.html
@@ -6,6 +6,8 @@
   <br>
   <h3>Software</h3>
   <br>
+  <a href="categoryart.html">Art</a> <p>Discover art programs to bring out your inner artist.</p>
+  <br>
   <a href="categorygames.html">Games</a> <p>Discover games that are made for Windows.</p>
   <br>
   <a href="categorymanagement.html">Management</a> <p>Discover management programs for Windows.</p>
