--- a/categorygadgets.html
+++ b/categorygadgets.html
@@ -17,7 +17,7 @@
   <br>
   <p>✓ Google Gadget (EN) <a href="https://archive.org/download/w7topgadgets/W7Website_TopGadgets.zip/Google_Gadget_EN.gadget">Download gadget for Windows</a></p>
   <br>
-  <p>✓ Piano Gadget <a href="https://archive.org/download/w7topgadgets/W7Website_TopGadgets.zip/Piano.gadget">Download gadget for Windows</a></p>
+  <p>Piano Gadget <a href="https://archive.org/download/w7topgadgets/W7Website_TopGadgets.zip/Piano.gadget">Download gadget for Windows</a></p>
   <br>
   <p>✓ Amazon Search Gadget <a href="https://archive.org/download/w7topgadgets/W7Website_TopGadgets.zip/amazon_search.gadget">Download gadget for Windows</a></p>
   <br>
