--- a/categoryhub.html
+++ b/categoryhub.html
@@ -8,6 +8,8 @@
   <br>
   <a href="categoryart.html">Art</a> <p>Discover art programs to bring out your inner artist.</p>
   <br>
+  <a href="categorydiskman.html">Disk Management</a> <p>Discover disk management tools for Windows.</p>
+  <br>
   <a href="categorygadgets.html">Gadgets</a> <p>Discover desktop gadgets for Windows.</p>
   <br>
   <a href="categorygames.html">Games</a> <p>Discover games that are made for Windows.</p>
