--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <br>
   <img src="topimage.gif">
   <br>
-  <br>
-  <img src="sw3.jpg">
+  <img src="sw3.jpg"> 
   <br>
   <p>Featured categories</p>
   <ul>
@@ -26,4 +25,8 @@
   </ul>
   <p>____________________</p>
   <a href="categoryhub.html">View all categories</a>
+  <br>
+  <img src="headerHighlights.gif">
+  <p>Relive the classics with The classic game, 3D Pinball space</p>
+  <p>and others, in the <a href="categorygames.html">Games</a> Section.</p>
 </html>
