--- a/categoryhub.html
+++ b/categoryhub.html
@@ -16,6 +16,8 @@
   <br>
   <a href="categorymanagement.html">Management</a> <p>Discover management programs for Windows.</p>
   <br>
+  <a href="categoryscreensaver.html">Screensavers</a> <p> Discover Screensavers for Windows.</p>
+  <br>
   <a href="categoryvirtual.html">Virtualization</a> <p>Discover virtualization software which allows you to install a computer inside a computer.</p>
   
 </html>
