--- a/index.html
+++ b/index.html
@@ -7,26 +7,6 @@
   </head>
   <img src="cmp-logo.PNG">
   <br>
-  <p style="background-color:#0096FF;">Navigation Bar                      <a href="categoryhub.html">Software</a> <a href="community.html">Community</a>                       </p>
-  <br>
-  <img src="topimage.gif">
-  <br>
-  <img src="sw3.jpg"> 
-  <br>
-  <p>Featured categories</p>
-  <ul>
-    <ls>
-      <a href="categorygames.html">Games</a>
-      <br>
-      <a href="categorymanagement.html">Management</a>
-      <br>
-      <a href="categoryvirtual.html">Virtualization</a>
-    </ls>
-  </ul>
-  <p>____________________</p>
-  <a href="categoryhub.html">View all categories</a>
-  <br>
-  <img src="headerHighlights.gif">
-  <p>Relive the classics with The classic game, 3D Pinball space</p>
-  <p>and others, in the <a href="categorygames.html">Games</a> Section.</p>
+  <h3>Classic Marketplace has been Discontinued.</h3>
+  <p>Classic Marketplace is being discontinued in favour of Classic Live Gallery. You can see more info <a href="live.html">Here.</a></p>
 </html>
