--- a/livebeta.html
+++ b/livebeta.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <p><h3>Placeholder.ClassicLiveLogo</h3>       <a href="escargot.chat">Escargot</a>        <a href="categoryhub.html">Classic Software</a>          </p>
+  <p><h3>Placeholder.ClassicLiveLogo</h3>       <a href="https://escargot.chat">Escargot</a>        <a href="categoryhub.html">Classic Software</a>          </p>
   <br>
   <h3>Welcome to Classic Live Gallery Beta Site!</h3>
   <p>Nothing here is finished, and is in early prototype.</p>
